Git Tests/force-app/main/default/default/objects/RecomendacaoCotacao__c/RecomendacaoCotacao__c.object-meta.xml
<CustomObject>
    <label>Recomendação da cotação</label>
    <nameField>
        <label>Nome de Recomendação da cotação</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recomendações da cotação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>