Git Tests/force-app/main/default/default/objects/RecomendacaoCotacao__c/fields/CodigoItem__c.field-meta.xml
<CustomField>
    <fullName>CodigoItem__c</fullName>
    <formula>Produto__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do item</label>
    <type>Text</type>
</CustomField>