Git Tests/force-app/main/default/default/objects/RecomendacaoCotacao__c/fields/Cotacao__c.field-meta.xml
<CustomField>
    <fullName>Cotacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotação</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Recomendações da cotação</relationshipLabel>
    <relationshipName>RecomendacaoCotacao</relationshipName>
    <type>Lookup</type>
</CustomField>