Git Tests/force-app/main/default/default/objects/RecomendacaoCotacao__c/fields/Estoque__c.field-meta.xml
<CustomField>
    <fullName>Estoque__c</fullName>
    <label>Estoque</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>