Git Tests/force-app/main/default/default/objects/RecomendacaoCotacao__c/fields/Fabricante__c.field-meta.xml
<CustomField>
    <fullName>Fabricante__c</fullName>
    <formula>Produto__r.Fornecedor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fabricante</label>
    <type>Text</type>
</CustomField>