Git Tests/force-app/main/default/default/objects/RecomendacaoCotacao__c/fields/PrincipioAtivo__c.field-meta.xml
<CustomField>
    <fullName>PrincipioAtivo__c</fullName>
    <formula>IF(
OR(
ISPICKVAL(Produto__r.CategoriaComercial__c, &apos;S&apos;) , ISPICKVAL(Produto__r.CategoriaComercial__c, &apos;G&apos;)),
Produto__r.Description, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Princípio ativo</label>
    <type>Text</type>
</CustomField>